fix(config): wrong migration path

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "carmineplaitano/work-shift-calendar",
   "description": "Yii2 module to manage work shifts via vkurko calendar. Made for backend applications.",
   "keywords": ["yii2","module","work","shift","calendar", "vkurko"],
-  "type": "yii2-extension",
+  "type": "yii2-module",
   "license": "Apache-2.0",
   "authors": [
     {
@@ -17,18 +17,10 @@
   },
   "autoload": {
     "psr-4": {
-      "carmineplaitano\\work_shift_calendar\\": ""
+      "backend\\modules\\work_shift_calendar\\": "modules/work_shift_calendar"
     }
   },
   "extra": {
     "yii\\extension": "backend\\modules\\work_shift_calendar\\Module"
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "@php yii migrate --migrationNamespaces=backend\\\\modules\\\\work_shift_calendar\\\\migrations --interactive=0"
-    ],
-    "post-update-cmd": [
-      "@php yii migrate --migrationNamespaces=backend\\\\modules\\\\work_shift_calendar\\\\migrations --interactive=0"
-    ]
   }
 }
